bugfix (browse hubs): Fixed browse hubs buttons overlapping with text

--- a/client/src/pages/community-selection/CommunitySelection.scss
+++ b/client/src/pages/community-selection/CommunitySelection.scss
@@ -1,21 +1,3 @@
-:root {
-    --fnt-reg: black;
-    --fnt-hover: #8e47ff;
-}
-
-.hub-selection-text-center{
-    user-select: none;
-}
-
-.hub-container {
-    display: flex;
-    flex-direction: column;
-    // justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    // align-content: flex-start;
-}
-
 .create-hub{
     font-size: 1.5rem;
     font-weight: 800;
@@ -28,10 +10,10 @@
 .create-icon {
     height: 0.9em;
     margin-left: 10px;
-    transition: transform 0.1s ease-in-out; 
+    transition: transform 0.1s ease-in-out;
 
     &:hover {
-        transform: scale(1.05); 
+        transform: scale(1.05);
         border: 1px solid var(--fnt-hover);
         box-shadow: 0 0 7px var(--fnt-hover);
         color: var(--fnt-hover);
@@ -39,171 +21,65 @@
     }
 }
 
-.hub-category#hub-category  {
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin-bottom: 10px;
-}
+.browse-hub-accordion {
+    //This is so the drop down icon is white when active and you can see it
+    --bs-accordion-btn-active-icon:
+            url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='none' stroke='%23ffffff' stroke-linecap='round' stroke-linejoin='round'%3e%3cpath d='M2 5L8 11L14 5'/%3e%3c/svg%3e") !important;
 
-#hub-card.hub-card{
-    width: 12rem;
-    margin-bottom: 20px;
-    border-radius: 8px;
-    border-color: var(--fnt-hover);
-    transition: transform 0.1s ease-in-out; 
 
-    &:hover {
-        transform: scale(1.05); 
-        border: 1px solid var(--fnt-hover);
-        box-shadow: 0 0 7px var(--fnt-hover);
-        color: #8e47ff;
+    .accordion-button[aria-expanded="true"]::after {
+        transform: rotate(360deg);
+    }
+
+    .accordion-button[aria-expanded="false"]::after {
+        transform: rotate(270deg);
+    }
+
+    .accordion-button::after {
+        transition: transform 0.3s ease;
+    }
+
+    .accordion-item {
+        .accordion-header {
+            .accordion-button:not(.collapsed) {
+                color: white;
+            }
+
+            .accordion-button {
+                --bs-accordion-active-bg: #8e47ff;
+            }
+        }
     }
 }
 
-.hub-card-link{
-    text-decoration: none;
-    color: var(--fnt-reg)
+.browse-hub-body {
+    display: flex;
+    flex-wrap: wrap;
+
+    .hub-selection-card {
+        border: 2px solid var(--HHPurple);
+        padding: 5px 10px;
+        margin: 10px;
+        border-radius: 8px;
+        width: 350px;
+
+        display: flex;
+        flex-direction: column;
+
+
+        .hub-selection-title {
+            font-size: 16px;
+            font-weight: 600;
+        }
+
+        pre {
+            margin: 0;
+            padding: 0;
+        }
+
+        &:hover {
+            cursor: pointer;
+        }
+
+    }
 }
-
-.hub-card .hub-card-title {
-    font-size: 20px; 
-    text-align: center;
-}
-
-#create-modal-header .close svg {
-    color: var(--fnt-hover); 
-}
-
-#create-modal-header,
-#create-form-control,
-#create-form-control:focus {
-    background-color: #F1E8F5;
-}
-
-.create-form-control{
-    margin-bottom: 15px;
-}
-
-.create-modal-header .close svg {
-    color: #f8f9fa; /* Adjust this value to your desired color */
-}
-
-.create-form-label {
-    font-size: 1.2em; 
-    font-weight: bold; 
-}
-
-#cancel-button,
-#cancel-button:hover,
-#cancel-button:active,
-#cancel-button:hover:active {
-    background-color: #f8f9fa; 
-    color: var(--fnt-hover); 
-    border-color: var(--fnt-hover);
-}
-
-#create-button,
-#create-button:hover,
-#create-button:active,
-#create-button:hover:active {
-    background-color: var(--fnt-hover); 
-    color: #f8f9fa; 
-    border-color: var(--fnt-hover);
-}
-
-
-#cancel-button,
-#create-button {
-    transition: transform 0.1s ease-in-out;
-}
-
-#cancel-button:hover,
-#create-button:hover {
-    transform: scale(1.1);
-}
-
-
-@media screen and (max-width: 575px){
-    #cancel-button,
-    #create-button {
-        transition: none;
-        font-size: 18px;
-        margin-top: 20px;
-    }
-
-    #cancel-button:hover,
-    #create-button:hover {
-        transform: none;
-        
-    }
-
-    #cancel-button {
-        margin-right: 10px;
-    }
-    
-    #create-button {
-        margin-left: 10px;
-    }
-
-    #hub-card.hub-card:hover {
-        transform: none;
-        border: none;
-        box-shadow: none;
-        color: inherit;
-    }
-
-    .hub-card#hub-card{
-        width: 8rem;
-    }
-
-    .hub-category#hub-category{
-        font-size: 16px;
-        // margin-top: 10px;
-    }
-
-    #hub-card-title,
-    #create-hub-mobile-link{
-        font-size: 14px;
-    }
-
-    #hub-card-body {
-        padding: 15px;
-    }
-
-    #create-hub-mobile-link {
-        font-size: 16px;
-        font-weight: 500;
-        margin-bottom: 30px;
-    }
-
-    #create-hub-mobile {
-        width: 100%;
-        font-size: 20px;
-        font-weight: 800;
-        //border-top: 1px solid #A19C9C;
-        border-bottom: 1px solid #A19C9C;
-        padding: 10px 0;
-        margin: 10px 0; // Add some margin to the top and bottom
-    }
-
-    #hub-label-mobile {
-        font-weight: 800;
-        font-size: 20px;
-    }
-
-    #create-form-control-mobile {
-        border-color: #D2D2D2;
-        margin-bottom: 10px;
-    }
-
-    .custom-radio.radio-mobile {
-        font-size: 18px;
-        margin-bottom: 5px;
-    }
-
-    
-}
-
-
-
-
